--- a/app/manifest.json
+++ b/app/manifest.json
@@ -10,7 +10,7 @@
     "management"
   ],
   "background": {
-    "scripts": ["js/vendor/angular.min.js"]
+    "scripts": ["js/vendor/angular/angular.min.js"]
   },
   "content_security_policy": "script-src 'self'; object-src 'self'",
   "chrome_url_overrides" : {
